--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@emotion/react": "^11.1.5",
     "gatsby": "^2.26.1",
     "gatsby-plugin-emotion": "^5.4.0",
+    "gatsby-plugin-manifest": "^3.0.0",
+    "gatsby-plugin-offline": "^4.0.0",
+    "gatsby-plugin-react-helmet": "^4.0.0",
     "gatsby-plugin-typography": "^2.12.0",
     "gatsby-source-filesystem": "^3.0.0",
     "gatsby-transformer-remark": "^3.0.0",
